--- a/mybooks_backend/src/main/resources/application.properties
+++ b/mybooks_backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mybooks?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/mybooks?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
 
@@ -12,5 +12,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 
 jwt.secret='[a-zA-Z0-9._]^+$Guidelines89797987forAlphabeticalArraNumeralsandOtherSymbo$'
+
+spring.jackson.serialization.fail-on-empty-beans=false
 
 
